# poetry-base

./: .gitignore  pyproject.toml
tests/: test_poetry_base.py
