[tool.poetry]
name = "poetry-base"
version = "0.1.0"
description = ""
authors = ["y4m3 <y4m3@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
