[tool.poetry]
name = "poetry-base"
version = "0.1.0"
description = ""
authors = ["y4m3 <y4m3@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pysen = {version = "^0.10.1", extras = ["lint"]}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pysen]
version = "0.10.1"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = true
mypy_preset = "strict"
line_length = 88
[[tool.pysen.lint.mypy_targets]]
  paths = ["."]
